// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal unit tests Closes on backdrop click 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  width: 100%;
  height: 100%;
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  z-index: 1050;
}

.emotion-1 {
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  width: 100%;
  height: auto;
  position: relative;
  z-index: 10;
}

@media (min-width: 768px) {
  .emotion-1 {
    width: 80%;
  }
}

@media (min-width: 1024px) {
  .emotion-1 {
    width: 50%;
  }
}

@media (min-width: 1280px) {
  .emotion-1 {
    width: 40%;
  }
}

.emotion-2 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-3 {
  padding: 1rem;
  border-top-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

<div
    class="emotion-0"
    data-testid="modal-backdrop"
    style="opacity: 0;"
  >
    <div
      class="emotion-1"
      style="opacity: 0; transform: translateY(-100%) translateZ(0);"
    >
      <div
        class="emotion-2"
      >
        This is the body
      </div>
      <div
        class="emotion-3"
      >
        This is the footer
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal unit tests Does not close on backdrop click 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  width: 100%;
  height: 100%;
  --tw-bg-opacity: 1;
  background-color: rgba(147, 51, 234, var(--tw-bg-opacity));
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  z-index: 1050;
}

.emotion-1 {
  border-radius: 0.375rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  width: 100%;
  height: auto;
  position: relative;
  z-index: 10;
}

@media (min-width: 768px) {
  .emotion-1 {
    width: 80%;
  }
}

@media (min-width: 1024px) {
  .emotion-1 {
    width: 50%;
  }
}

@media (min-width: 1280px) {
  .emotion-1 {
    width: 40%;
  }
}

.emotion-2 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.emotion-3 {
  padding: 1rem;
  border-top-width: 2px;
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="emotion-0"
    data-testid="modal-backdrop"
    style="opacity: 0;"
  >
    <div
      class="emotion-1"
      style="opacity: 0; transform: translateY(-100%) translateZ(0);"
    >
      <div
        class="emotion-2"
      >
        This is the body
      </div>
      <div
        class="emotion-3"
      >
        This is the footer
      </div>
    </div>
  </div>
</DocumentFragment>
`;
